# rust-cfzt-validator

./: .gitignore  Cargo.toml  LICENSE  README.md  cloudflared.yaml  compose.yaml  generate_mock_jwts.py
.github/workflows/: cargo.yaml
src/: api.rs  app_token.rs  cache.rs  errors.rs  keys.rs  lib.rs  unpack.rs
test_data/: dummy_signing_keys.json  mock_private_keys.json  mock_signing_key_1.json  mock_signing_key_2.json  sample_signing_keys.json
