[package]
name = "rust-cfzt-validator"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A library crate for validation of Cloudflare Zero Trust JWTs"
repository = "https://github.com/jacobneiltaylor/rust-cfzt-validator"
readme = "README.md"
include = ["src/*.rs"]

[lib]
name = "rust_cfzt_validator"
path = "src/lib.rs"

[dependencies]
jsonwebtoken = "9.3.0"
serde = "1.0.203"
serde_json = "1.0.117"
ureq = { version = "2.9.7", features = ["json"] }
