[package]
name = "rust-cfzt-validator"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "A library crate for validation of Cloudflare Zero Trust JWTs"
repository = "https://github.com/jacobneiltaylor/rust-cfzt-validator"
readme = "README.md"
include = ["src/*.rs"]

[lib]
name = "rust_cfzt_validator"
path = "src/lib.rs"

[dependencies]
jsonwebtoken = "9.3.0"
serde = "1.0.216"
serde_json = "1.0.133"
ureq = { version = "2.12.1", features = ["json"] }
